--- a/challenge-api/src/main/resources/application.yml
+++ b/challenge-api/src/main/resources/application.yml
@@ -58,5 +58,4 @@ vivareal:
         rentalPriceDiscount: 30
 
 properties:
-    filePath: 'data/properties.json'
-    isAbsolutePath: false
+    filePath: 'http://grupozap-code-challenge.s3-website-us-east-1.amazonaws.com/sources/source-2.json'
