--- a/challenge-common/pom.xml
+++ b/challenge-common/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.9.0.pr2</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+        </dependency>
     </dependencies>
 
 </project>
