--- a/challenge-common/src/test/resources/application-test.yml
+++ b/challenge-common/src/test/resources/application-test.yml
@@ -19,5 +19,4 @@ vivareal:
         rentalPriceDiscount: 30
 
 properties:
-    filePath: 'src/test/resources/data/properties.json'
-    isAbsolutePath: true
+    filePath: 'http://grupozap-code-challenge.s3-website-us-east-1.amazonaws.com/sources/source-2.json'
